Increase spacing between sliders to avoid tooltip overlap

--- a/app/assets/stylesheets/palette.css.scss
+++ b/app/assets/stylesheets/palette.css.scss
@@ -32,7 +32,7 @@
 
     .slider{
       width: 300px;
-      margin: 0 0 0 5px;
+      margin: 0 0 15px 5px;
     }
   }
 }
